--- a/vignettes/package-vignette.Rmd
+++ b/vignettes/package-vignette.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 Snow loads have long been a primary design consideration for roofs, but little work has been done to determine the unique interactions of snow and solar panels. It is crucial that solar panels in many portions of the United States be built to withstand severe winter weather. A combination of tilting angles and the insulating property of solar panels ensures that snow is melted off panels within days. This shedding phenomenon limits the amount of time that snow accumulates on the panel, which is a critical structural difference compared to non-slip roofing systems. This shedding phenomenon of snow on panels motivates the need for a method to mimic and analyze snow measurements as though it felt on a solar panel. 
 The <TT>rdailychange</TT> package provides a way to extract daily sequential changes, fit, and estimate ground snow load mean recurrence intervals (MRIs) for any weather station across the United States. The DAY-1 method assumes the shedding phenomenon of solar panels occurs daily, as such observations are daily sequential
-changes. On the other hand, DAY-2, DAY-3, DAY-4, and DAY-5 method assume snow shedding occurs after two, three, fourth, and fifth day of continuous snow accumulation. A simple demonstration of the workflow underlying estimating MRI values from single and multiple-day snow accumulations is provided in this vignette for the 100 randomly selected First-order stations(FOS). The package README also demonstrates this workflow by estimating MRI values for 7 FOS weather stations. 
+changes. On the other hand, DAY-2, DAY-3, DAY-4, and DAY-5 method assume snow shedding occurs after two, three, fourth, and fifth day of continuous snow accumulation. A simple demonstration of the workflow underlying estimating MRI values from single and multiple-day snow accumulations is provided in this vignette for the 100 randomly selected First-order stations (FOS). The package README also demonstrates this workflow by estimating MRI values for 7 FOS weather stations. 
 
 
 
@@ -65,12 +65,12 @@ plot_usmap("states") +
 
 * * * 
 
-## Extract Day-X observations
+## Extract Day-X Observations
 Our goal is to mimic the snow shedding phenomenon on solar panel across the United States. Doing so 
 allows us to compare how sensitive are MRI values from a single day to multiple day accumulation. 
 The first step in the workflow is to extract the single and multiple-day observations.
 Using the <TT>extract_observations()</TT> function as demonstrated below returns a
-list of list object. Each list represents a weather station and within each list 
+list of list objects. Each list represents a weather station and within each list 
 is the Day-X observations and the annual maximum snow loads. Note that as we move from
 a single to  multiple day there is a reduction in the number of extracted observations. 
 
@@ -129,11 +129,11 @@ a GP using  the peak-over-thresholds approach did not significantly change our r
 
 * * * 
 
-## Visualize MRI values
+## Visualize MRI Values
 In this section of the workflow we will visualize the 50-year MRI and their
-respective ration of the solar-specific MRI values to that of the traditional design
+respective ratio of the solar-specific MRI values to that of the traditional design
 load standard. The traditional design standard MRI values are calculated using annual
-maximum loads. Note that the <TT>plot_events()</TT> function demonstrated below can be 
+maximum loads. Note that the generic <TT>plot()</TT> function demonstrated below can be 
 applied to multiple-day objects.
 
 ```{r fig.height = 6, fig.width = 6, fig.align = "center"}
